<resources>
    <string name="greeting_format">Olá %2$s, %1$s!</string>
    <string name="greeting_default">Olá Letícia, Boa tarde!</string>
    <string name="period_morning">Bom dia</string>
    <string name="period_afternoon">Boa tarde</string>
    <string name="period_night">Boa noite</string>
    <string name="user_name">Letícia</string>
    <string name="subtitle">Bora se hidratar hoje?</string>
    <string name="avatar_content_description">Avatar de perfil</string>
    <string name="glasses_today">copos hoje</string>
    <string name="motivation">💧  Cada copo de água te deixa mais forte, saudável e com mais energia! 💙</string>
    <string name="next_reminders">🔔  Próximos lembretes</string>
    <string name="activate_button_inactive">ATIVAR LEMBRETES</string>
    <string name="activate_button_active">✓ LEMBRETES ATIVOS</string>
    <string name="disable_button">DESATIVAR</string>
    <string name="status_active_format">Lembretes ativos • %1$s</string>
    <string name="status_inactive_format">%1$d lembretes por dia, a cada 2 horas</string>
    <string name="status_inactive_preview">6 lembretes por dia, a cada 2 horas</string>
    <string name="settings_link">Configurar permissão de alarme exato</string>
</resources>
